# torchgam

./: README.md  pyproject.toml
src/torchgam/: __init__.py  gam.py
