[project]
name = "torchgam"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "John San Soucie", email = "jsansoucie@whoi.edu" }
]
dependencies = [
    "torch>=2.1.0",
    "pyro-ppl>=1.8.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "matplotlib>=3.7.3",
    "numpy>=1.24.4",
]

[tool.hatch.metadata]
allow-direct-references = true
